# shot-engine

./: LICENSE  README.md  package-lock.json  package.json
apps/electron/: package-lock.json  package.json  tsconfig.json
apps/electron/src/: ipc-common.d.ts  main.ts  message-boxes.ts  preload.ts  renderer.ts
apps/electron/src/importer/assimp/: assimp-importer.ts
apps/react-app/: index.html  package-lock.json  package.json
apps/react-app/src/: App.tsx  engine.d.ts  global.d.ts  ipc-common.d.ts
apps/react-app/src/global-state/: listenerMiddleware.ts  store.ts
core-engine/: .gitignore  CMakeLists.txt  build.sh  main.cpp  testwin.cpp
core-engine/components/: Component.hpp  Mesh.cpp  Mesh.hpp  Transform.cpp  Transform.hpp
core-engine/graphics/renderer/: Renderer.cpp  Renderer.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp
core-engine/graphics/renderer/common/: FrameBuffer.hpp
core-engine/scene/: Object.cpp  Object.hpp
editor/main/: package-lock.json  package.json  test.json  tsconfig.json
editor/main/src/: global.d.ts  ipc-common.d.ts  main.ts  message-boxes.ts  preload.ts
editor/main/src/importer/: fbx-test.ts
editor/main/src/my-watcher/: engine-zod.ts  my-watcher.ts
editor/main/src/wasm/: basis_encoder.wasm
editor/main/test/: CubeTest.fbx  CubeTest.fbx.out1  CubeTest.fbx.out2  fbx-test.ts
editor/renderer/react-app/: index.html  package-lock.json  package.json
editor/renderer/react-app/docs/: folder-manager.txt
editor/renderer/react-app/src/: App.tsx  engine-zod.ts  engine.d.ts  global.d.ts  index.css  ipc-common.d.ts  main.tsx
(+210 files in other folders)
